# HawknTech-test

./: EXPLAINATION.md  README.md  pyproject.toml
api/: urls.py
base/: settings.py  urls.py
core/: admin.py  constants.py  models.py  permissions.py  serializers.py  services.py  tests.py  utils.py  views.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py  0002_stocktransfer_transfer_type_and_more.py  0003_remove_stocktransfer_unique_transfer_pending_and_more.py
docs/: API_DOCS.json  HawkN Assessment API - adith_p.postman_collection.json
